welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:27: error: value Green is not a member of object java.awt.Color
  faireFleur(Color.Green)
                   ^